--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 
 plugins {
-    id 'org.jetbrains.kotlin.multiplatform' version '1.3.50'
+    id 'org.jetbrains.kotlin.multiplatform' version '1.3.61'
 }
 
 repositories {
@@ -30,11 +30,12 @@ kotlin {
         mingwMain {
             dependencies{
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion"
+                implementation "org.jetbrains.kotlinx:kotlinx-io-native:0.1.16"
             }
         }
         mingwTest{
             dependencies{
-
+                implementation kotlin('test-common')
             }
         }
     }
