--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
 kotlin.code.style=official
-kotlin.import.noCommonSourceSets=true
 kotlinxCoroutinesVersion=1.3.2
-kotlin.import.noCommonSourceSets=true
+kotlin.import.noCommonSourceSets=false
