--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ kotlin {
             dependencies{
                 implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-native:1.3.3'
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion"
-                implementation "org.jetbrains.kotlinx:kotlinx-io:0.1.16"
+//                implementation "org.jetbrains.kotlinx:kotlinx-io:0.1.16"
                 implementation "org.jetbrains.kotlinx:kotlinx-io-native:0.1.16"
             }
         }
