--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ kotlin {
         mingwTest{
             dependencies{
                 implementation kotlin('test-common')
+                implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-native:1.3.3'
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion"
+//                implementation "org.jetbrains.kotlinx:kotlinx-io:0.1.16"
+                implementation "org.jetbrains.kotlinx:kotlinx-io-native:0.1.16"
             }
         }
     }
