--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
-
 plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.61'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.60'
 }
 
 repositories {
@@ -31,8 +31,8 @@ kotlin {
             dependencies{
                 implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-native:1.3.3'
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinxCoroutinesVersion"
-//                implementation "org.jetbrains.kotlinx:kotlinx-io:0.1.16"
                 implementation "org.jetbrains.kotlinx:kotlinx-io-native:0.1.16"
+                implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:0.14.0"
             }
         }
         mingwTest{
